# fluffy-octo-lamp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/octolamp/: cli.py  core.py
tests/: test_core.py
