[project]
name = "octolamp"
version = "0.1.0"
description = "A tiny starter CLI app (fluffy-octo-lamp)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Krish Sharma" }]
dependencies = []

[project.scripts]
octolamp = "octolamp.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
